# RPyScope

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTORS.md  Documents.code-workspace  README.md  RPyScope.sh  config.json  pyproject.toml  pytest.ini  rpyscope-config.json  setup.py
rpyscope/: __init__.py  add_widgets.py  detection.py  gui_qt.py  microscope.py  rpyscope-config.json  simple_app.py
rpyscope/cameras/: __init__.py  abstract_camera.py  rpi_cam.py  simulation.py
simple_camera/: simple_capture.py
src/rpyscope/: __init__.py  __main__.py  add_widgets.py  app.py  camera.py  controls.py  dev.py  gui_qt.py  preview.py  utils.py
src/rpyscope/cameras/: rpi_cam.py
src/rpyscope_old/: gui.py  microscope.py
src/rpyscope_old/cameras/: abstract_camera.py  simulation.py
tests/: test_microscope.py  test_utils.py
tests/test_cameras/: test_simulation.py
tmp/: README.md  capture_config.json  preview_config.json  video_config.json
