[project]
name = "rpyscope"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
dependencies = [
    "pyqtconfig>=0.9.2",
    "qtpy>=2.4.1",
    "PyQt5>=5.15.0",
    "pillow>=9.4.0",
    "numpy>=1.24.0",
    "sentry_sdk>=1.40.3",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }

[project.scripts]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rpyscope"]

[tool.pytest]
testpaths = "tests"
addopts = "--cov=rpyscope -v"
